--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <div class="left-nav">
                 <img src="Images/Group 40071 (2).png" alt="">
                 <h2>Travel <span class="yellow">Space</span></h2>
+                <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" class="menu-toggle-label">&#9776;</label>
             </div>
             <div class="right-nav">
                 <li><a href=""> <span class="yellow">Home</span></a></li>
